# wordle-star

./: Cargo.toml  LICENSE  README.md
assets/: style.toml
src/: dictionary.rs  game.rs  guess.rs  keyboard_view.rs  lib.rs
